y.output
Terminals unused in grammar

   RESERVED


Grammar

    0 $accept: Functions_and_declarations $end

    1 Functions_and_declarations: Functions_and_declarations_mandatory Functions_and_declarations_none_or_more

    2 Functions_and_declarations_mandatory: Function_definition
    3                                     | Function_declaration
    4                                     | Declaration

    5 Functions_and_declarations_none_or_more: Functions_and_declarations_mandatory Functions_and_declarations_none_or_more
    6                                        | %empty

    7 Function_definition: Type_spec Function_declarator Function_body

    8 Function_body: LBRACE Declarations_and_statements RBRACE
    9              | LBRACE RBRACE

   10 Declarations_and_statements: Statement Declarations_and_statements
   11                            | Declaration Declarations_and_statements
   12                            | Statement
   13                            | Declaration

   14 Function_declaration: Type_spec Function_declarator SEMI

   15 Function_declarator: ID LPAR Parameter_list RPAR

   16 Parameter_list: Parameter_declaration Parameter_declaration_none_or_more

   17 Parameter_declaration_none_or_more: COMMA Parameter_declaration
   18                                   | %empty

   19 Parameter_declaration: Type_spec ID
   20                      | Type_spec

   21 Declaration: Type_spec Declarator Declarator_none_or_more SEMI
   22            | error SEMI

   23 Declarator_none_or_more: COMMA Declarator
   24                        | %empty

   25 Declarator: ID ASSIGN Expr
   26           | ID

   27 Type_spec: INT
   28          | CHAR
   29          | VOID
   30          | SHORT
   31          | DOUBLE

   32 Statement: SEMI
   33          | Expr SEMI
   34          | LBRACE Statement_none_or_more RBRACE
   35          | LBRACE error RBRACE
   36          | IF LPAR Expr RPAR Statement_or_error ELSE Statement_or_error
   37          | IF LPAR Expr RPAR Statement_or_error
   38          | WHILE LPAR Expr RPAR Statement_or_error
   39          | RETURN Expr SEMI
   40          | RETURN SEMI

   41 Statement_or_error: Statement
   42                   | error SEMI

   43 Statement_none_or_more: Statement Statement_none_or_more
   44                       | %empty

   45 Expr: Assignment_expr
   46     | Expr COMMA Assignment_expr

   47 Assignment_expr: Logical_OR_expr
   48                | Unary_expression ASSIGN Assignment_expr

   49 Logical_OR_expr: Logical_AND_expr
   50                | Logical_OR_expr OR Logical_AND_expr

   51 Logical_AND_expr: Inclusive_OR_expr
   52                 | Logical_AND_expr AND Inclusive_OR_expr

   53 Inclusive_OR_expr: Exclusive_OR_expr
   54                  | Inclusive_OR_expr BITWISEOR Exclusive_OR_expr

   55 Exclusive_OR_expr: AND_expr
   56                  | Exclusive_OR_expr BITWISEXOR AND_expr

   57 AND_expr: Equality_expr
   58         | AND_expr BITWISEAND Equality_expr

   59 Equality_expr: Relational_expr
   60              | Equality_expr EQ Relational_expr
   61              | Equality_expr NE Relational_expr

   62 Relational_expr: Additive_expr
   63                | Relational_expr LT Additive_expr
   64                | Relational_expr GT Additive_expr
   65                | Relational_expr LE Additive_expr
   66                | Relational_expr GE Additive_expr

   67 Additive_expr: Multiplicative_expr
   68              | Additive_expr PLUS Multiplicative_expr
   69              | Additive_expr MINUS Multiplicative_expr

   70 Multiplicative_expr: Unary_expression
   71                    | Multiplicative_expr MUL Unary_expression
   72                    | Multiplicative_expr DIV Unary_expression
   73                    | Multiplicative_expr MOD Unary_expression

   74 Unary_expression: Postfix_expr
   75                 | PLUS Unary_expression
   76                 | MINUS Unary_expression
   77                 | NOT Unary_expression

   78 Argument_expr_list: Assignment_expr
   79                   | Argument_expr_list COMMA Assignment_expr

   80 Postfix_expr: Primary_expr
   81             | Postfix_expr LPAR Argument_expr_list RPAR
   82             | Postfix_expr LPAR RPAR

   83 Primary_expr: ID
   84             | INTLIT
   85             | CHRLIT
   86             | REALLIT
   87             | LPAR Expr RPAR
   88             | LPAR error RPAR


Terminals, with rules where they appear

$end (0) 0
error (256) 22 35 42 88
REALLIT (258) 86
INTLIT (259) 84
CHRLIT (260) 85
CHAR (261) 28
ELSE (262) 36
WHILE (263) 38
IF (264) 36 37
INT (265) 27
SHORT (266) 30
DOUBLE (267) 31
RETURN (268) 39 40
VOID (269) 29
BITWISEAND (270) 58
BITWISEOR (271) 54
BITWISEXOR (272) 56
AND (273) 52
ASSIGN (274) 25 48
MUL (275) 71
COMMA (276) 17 23 46 79
DIV (277) 72
EQ (278) 60
GE (279) 66
GT (280) 64
LBRACE (281) 8 9 34 35
LE (282) 65
LPAR (283) 15 36 37 38 81 82 87 88
LT (284) 63
MINUS (285) 69 76
MOD (286) 73
NE (287) 61
NOT (288) 77
OR (289) 50
PLUS (290) 68 75
RBRACE (291) 8 9 34 35
RPAR (292) 15 36 37 38 81 82 87 88
SEMI (293) 14 21 22 32 33 39 40 42
RESERVED (294)
ID (295) 15 19 25 26 83


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
Functions_and_declarations (42)
    on left: 1, on right: 0
Functions_and_declarations_mandatory (43)
    on left: 2 3 4, on right: 1 5
Functions_and_declarations_none_or_more (44)
    on left: 5 6, on right: 1 5
Function_definition (45)
    on left: 7, on right: 2
Function_body (46)
    on left: 8 9, on right: 7
Declarations_and_statements (47)
    on left: 10 11 12 13, on right: 8 10 11
Function_declaration (48)
    on left: 14, on right: 3
Function_declarator (49)
    on left: 15, on right: 7 14
Parameter_list (50)
    on left: 16, on right: 15
Parameter_declaration_none_or_more (51)
    on left: 17 18, on right: 16
Parameter_declaration (52)
    on left: 19 20, on right: 16 17
Declaration (53)
    on left: 21 22, on right: 4 11 13
Declarator_none_or_more (54)
    on left: 23 24, on right: 21
Declarator (55)
    on left: 25 26, on right: 21 23
Type_spec (56)
    on left: 27 28 29 30 31, on right: 7 14 19 20 21
Statement (57)
    on left: 32 33 34 35 36 37 38 39 40, on right: 10 12 41 43
Statement_or_error (58)
    on left: 41 42, on right: 36 37 38
Statement_none_or_more (59)
    on left: 43 44, on right: 34 43
Expr (60)
    on left: 45 46, on right: 25 33 36 37 38 39 46 87
Assignment_expr (61)
    on left: 47 48, on right: 45 46 48 78 79
Logical_OR_expr (62)
    on left: 49 50, on right: 47 50
Logical_AND_expr (63)
    on left: 51 52, on right: 49 50 52
Inclusive_OR_expr (64)
    on left: 53 54, on right: 51 52 54
Exclusive_OR_expr (65)
    on left: 55 56, on right: 53 54 56
AND_expr (66)
    on left: 57 58, on right: 55 56 58
Equality_expr (67)
    on left: 59 60 61, on right: 57 58 60 61
Relational_expr (68)
    on left: 62 63 64 65 66, on right: 59 60 61 63 64 65 66
Additive_expr (69)
    on left: 67 68 69, on right: 62 63 64 65 66 68 69
Multiplicative_expr (70)
    on left: 70 71 72 73, on right: 67 68 69 71 72 73
Unary_expression (71)
    on left: 74 75 76 77, on right: 48 70 71 72 73 75 76 77
Argument_expr_list (72)
    on left: 78 79, on right: 79 81
Postfix_expr (73)
    on left: 80 81 82, on right: 74 81 82
Primary_expr (74)
    on left: 83 84 85 86 87 88, on right: 80


State 0

    0 $accept: . Functions_and_declarations $end

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    Functions_and_declarations            go to state 7
    Functions_and_declarations_mandatory  go to state 8
    Function_definition                   go to state 9
    Function_declaration                  go to state 10
    Declaration                           go to state 11
    Type_spec                             go to state 12


State 1

   22 Declaration: error . SEMI

    SEMI  shift, and go to state 13


State 2

   28 Type_spec: CHAR .

    $default  reduce using rule 28 (Type_spec)


State 3

   27 Type_spec: INT .

    $default  reduce using rule 27 (Type_spec)


State 4

   30 Type_spec: SHORT .

    $default  reduce using rule 30 (Type_spec)


State 5

   31 Type_spec: DOUBLE .

    $default  reduce using rule 31 (Type_spec)


State 6

   29 Type_spec: VOID .

    $default  reduce using rule 29 (Type_spec)


State 7

    0 $accept: Functions_and_declarations . $end

    $end  shift, and go to state 14


State 8

    1 Functions_and_declarations: Functions_and_declarations_mandatory . Functions_and_declarations_none_or_more

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 6 (Functions_and_declarations_none_or_more)

    Functions_and_declarations_mandatory     go to state 15
    Functions_and_declarations_none_or_more  go to state 16
    Function_definition                      go to state 9
    Function_declaration                     go to state 10
    Declaration                              go to state 11
    Type_spec                                go to state 12


State 9

    2 Functions_and_declarations_mandatory: Function_definition .

    $default  reduce using rule 2 (Functions_and_declarations_mandatory)


State 10

    3 Functions_and_declarations_mandatory: Function_declaration .

    $default  reduce using rule 3 (Functions_and_declarations_mandatory)


State 11

    4 Functions_and_declarations_mandatory: Declaration .

    $default  reduce using rule 4 (Functions_and_declarations_mandatory)


State 12

    7 Function_definition: Type_spec . Function_declarator Function_body
   14 Function_declaration: Type_spec . Function_declarator SEMI
   21 Declaration: Type_spec . Declarator Declarator_none_or_more SEMI

    ID  shift, and go to state 17

    Function_declarator  go to state 18
    Declarator           go to state 19


State 13

   22 Declaration: error SEMI .

    $default  reduce using rule 22 (Declaration)


State 14

    0 $accept: Functions_and_declarations $end .

    $default  accept


State 15

    5 Functions_and_declarations_none_or_more: Functions_and_declarations_mandatory . Functions_and_declarations_none_or_more

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 6 (Functions_and_declarations_none_or_more)

    Functions_and_declarations_mandatory     go to state 15
    Functions_and_declarations_none_or_more  go to state 20
    Function_definition                      go to state 9
    Function_declaration                     go to state 10
    Declaration                              go to state 11
    Type_spec                                go to state 12


State 16

    1 Functions_and_declarations: Functions_and_declarations_mandatory Functions_and_declarations_none_or_more .

    $default  reduce using rule 1 (Functions_and_declarations)


State 17

   15 Function_declarator: ID . LPAR Parameter_list RPAR
   25 Declarator: ID . ASSIGN Expr
   26           | ID .

    ASSIGN  shift, and go to state 21
    LPAR    shift, and go to state 22

    $default  reduce using rule 26 (Declarator)


State 18

    7 Function_definition: Type_spec Function_declarator . Function_body
   14 Function_declaration: Type_spec Function_declarator . SEMI

    LBRACE  shift, and go to state 23
    SEMI    shift, and go to state 24

    Function_body  go to state 25


State 19

   21 Declaration: Type_spec Declarator . Declarator_none_or_more SEMI

    COMMA  shift, and go to state 26

    $default  reduce using rule 24 (Declarator_none_or_more)

    Declarator_none_or_more  go to state 27


State 20

    5 Functions_and_declarations_none_or_more: Functions_and_declarations_mandatory Functions_and_declarations_none_or_more .

    $default  reduce using rule 5 (Functions_and_declarations_none_or_more)


State 21

   25 Declarator: ID ASSIGN . Expr

    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    CHRLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    ID       shift, and go to state 35

    Expr                 go to state 36
    Assignment_expr      go to state 37
    Logical_OR_expr      go to state 38
    Logical_AND_expr     go to state 39
    Inclusive_OR_expr    go to state 40
    Exclusive_OR_expr    go to state 41
    AND_expr             go to state 42
    Equality_expr        go to state 43
    Relational_expr      go to state 44
    Additive_expr        go to state 45
    Multiplicative_expr  go to state 46
    Unary_expression     go to state 47
    Postfix_expr         go to state 48
    Primary_expr         go to state 49


State 22

   15 Function_declarator: ID LPAR . Parameter_list RPAR

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    Parameter_list         go to state 50
    Parameter_declaration  go to state 51
    Type_spec              go to state 52


State 23

    8 Function_body: LBRACE . Declarations_and_statements RBRACE
    9              | LBRACE . RBRACE

    error    shift, and go to state 1
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    CHRLIT   shift, and go to state 30
    CHAR     shift, and go to state 2
    WHILE    shift, and go to state 53
    IF       shift, and go to state 54
    INT      shift, and go to state 3
    SHORT    shift, and go to state 4
    DOUBLE   shift, and go to state 5
    RETURN   shift, and go to state 55
    VOID     shift, and go to state 6
    LBRACE   shift, and go to state 56
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    RBRACE   shift, and go to state 57
    SEMI     shift, and go to state 58
    ID       shift, and go to state 35

    Declarations_and_statements  go to state 59
    Declaration                  go to state 60
    Type_spec                    go to state 61
    Statement                    go to state 62
    Expr                         go to state 63
    Assignment_expr              go to state 37
    Logical_OR_expr              go to state 38
    Logical_AND_expr             go to state 39
    Inclusive_OR_expr            go to state 40
    Exclusive_OR_expr            go to state 41
    AND_expr                     go to state 42
    Equality_expr                go to state 43
    Relational_expr              go to state 44
    Additive_expr                go to state 45
    Multiplicative_expr          go to state 46
    Unary_expression             go to state 47
    Postfix_expr                 go to state 48
    Primary_expr                 go to state 49


State 24

   14 Function_declaration: Type_spec Function_declarator SEMI .

    $default  reduce using rule 14 (Function_declaration)


State 25

    7 Function_definition: Type_spec Function_declarator Function_body .

    $default  reduce using rule 7 (Function_definition)


State 26

   23 Declarator_none_or_more: COMMA . Declarator

    ID  shift, and go to state 64

    Declarator  go to state 65


State 27

   21 Declaration: Type_spec Declarator Declarator_none_or_more . SEMI

    SEMI  shift, and go to state 66


State 28

   86 Primary_expr: REALLIT .

    $default  reduce using rule 86 (Primary_expr)


State 29

   84 Primary_expr: INTLIT .

    $default  reduce using rule 84 (Primary_expr)


State 30

   85 Primary_expr: CHRLIT .

    $default  reduce using rule 85 (Primary_expr)


State 31

   87 Primary_expr: LPAR . Expr RPAR
   88             | LPAR . error RPAR

    error    shift, and go to state 67
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    CHRLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    ID       shift, and go to state 35

    Expr                 go to state 68
    Assignment_expr      go to state 37
    Logical_OR_expr      go to state 38
    Logical_AND_expr     go to state 39
    Inclusive_OR_expr    go to state 40
    Exclusive_OR_expr    go to state 41
    AND_expr             go to state 42
    Equality_expr        go to state 43
    Relational_expr      go to state 44
    Additive_expr        go to state 45
    Multiplicative_expr  go to state 46
    Unary_expression     go to state 47
    Postfix_expr         go to state 48
    Primary_expr         go to state 49


State 32

   76 Unary_expression: MINUS . Unary_expression

    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    CHRLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    ID       shift, and go to state 35

    Unary_expression  go to state 69
    Postfix_expr      go to state 48
    Primary_expr      go to state 49


State 33

   77 Unary_expression: NOT . Unary_expression

    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    CHRLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    ID       shift, and go to state 35

    Unary_expression  go to state 70
    Postfix_expr      go to state 48
    Primary_expr      go to state 49


State 34

   75 Unary_expression: PLUS . Unary_expression

    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    CHRLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    ID       shift, and go to state 35

    Unary_expression  go to state 71
    Postfix_expr      go to state 48
    Primary_expr      go to state 49


State 35

   83 Primary_expr: ID .

    $default  reduce using rule 83 (Primary_expr)


State 36

   25 Declarator: ID ASSIGN Expr .
   46 Expr: Expr . COMMA Assignment_expr

    COMMA  shift, and go to state 72

    $default  reduce using rule 25 (Declarator)


State 37

   45 Expr: Assignment_expr .

    $default  reduce using rule 45 (Expr)


State 38

   47 Assignment_expr: Logical_OR_expr .
   50 Logical_OR_expr: Logical_OR_expr . OR Logical_AND_expr

    OR  shift, and go to state 73

    $default  reduce using rule 47 (Assignment_expr)


State 39

   49 Logical_OR_expr: Logical_AND_expr .
   52 Logical_AND_expr: Logical_AND_expr . AND Inclusive_OR_expr

    AND  shift, and go to state 74

    $default  reduce using rule 49 (Logical_OR_expr)


State 40

   51 Logical_AND_expr: Inclusive_OR_expr .
   54 Inclusive_OR_expr: Inclusive_OR_expr . BITWISEOR Exclusive_OR_expr

    BITWISEOR  shift, and go to state 75

    $default  reduce using rule 51 (Logical_AND_expr)


State 41

   53 Inclusive_OR_expr: Exclusive_OR_expr .
   56 Exclusive_OR_expr: Exclusive_OR_expr . BITWISEXOR AND_expr

    BITWISEXOR  shift, and go to state 76

    $default  reduce using rule 53 (Inclusive_OR_expr)


State 42

   55 Exclusive_OR_expr: AND_expr .
   58 AND_expr: AND_expr . BITWISEAND Equality_expr

    BITWISEAND  shift, and go to state 77

    $default  reduce using rule 55 (Exclusive_OR_expr)


State 43

   57 AND_expr: Equality_expr .
   60 Equality_expr: Equality_expr . EQ Relational_expr
   61              | Equality_expr . NE Relational_expr

    EQ  shift, and go to state 78
    NE  shift, and go to state 79

    $default  reduce using rule 57 (AND_expr)


State 44

   59 Equality_expr: Relational_expr .
   63 Relational_expr: Relational_expr . LT Additive_expr
   64                | Relational_expr . GT Additive_expr
   65                | Relational_expr . LE Additive_expr
   66                | Relational_expr . GE Additive_expr

    GE  shift, and go to state 80
    GT  shift, and go to state 81
    LE  shift, and go to state 82
    LT  shift, and go to state 83

    $default  reduce using rule 59 (Equality_expr)


State 45

   62 Relational_expr: Additive_expr .
   68 Additive_expr: Additive_expr . PLUS Multiplicative_expr
   69              | Additive_expr . MINUS Multiplicative_expr

    MINUS  shift, and go to state 84
    PLUS   shift, and go to state 85

    $default  reduce using rule 62 (Relational_expr)


State 46

   67 Additive_expr: Multiplicative_expr .
   71 Multiplicative_expr: Multiplicative_expr . MUL Unary_expression
   72                    | Multiplicative_expr . DIV Unary_expression
   73                    | Multiplicative_expr . MOD Unary_expression

    MUL  shift, and go to state 86
    DIV  shift, and go to state 87
    MOD  shift, and go to state 88

    $default  reduce using rule 67 (Additive_expr)


State 47

   48 Assignment_expr: Unary_expression . ASSIGN Assignment_expr
   70 Multiplicative_expr: Unary_expression .

    ASSIGN  shift, and go to state 89

    $default  reduce using rule 70 (Multiplicative_expr)


State 48

   74 Unary_expression: Postfix_expr .
   81 Postfix_expr: Postfix_expr . LPAR Argument_expr_list RPAR
   82             | Postfix_expr . LPAR RPAR

    LPAR  shift, and go to state 90

    $default  reduce using rule 74 (Unary_expression)


State 49

   80 Postfix_expr: Primary_expr .

    $default  reduce using rule 80 (Postfix_expr)


State 50

   15 Function_declarator: ID LPAR Parameter_list . RPAR

    RPAR  shift, and go to state 91


State 51

   16 Parameter_list: Parameter_declaration . Parameter_declaration_none_or_more

    COMMA  shift, and go to state 92

    $default  reduce using rule 18 (Parameter_declaration_none_or_more)

    Parameter_declaration_none_or_more  go to state 93


State 52

   19 Parameter_declaration: Type_spec . ID
   20                      | Type_spec .

    ID  shift, and go to state 94

    $default  reduce using rule 20 (Parameter_declaration)


State 53

   38 Statement: WHILE . LPAR Expr RPAR Statement_or_error

    LPAR  shift, and go to state 95


State 54

   36 Statement: IF . LPAR Expr RPAR Statement_or_error ELSE Statement_or_error
   37          | IF . LPAR Expr RPAR Statement_or_error

    LPAR  shift, and go to state 96


State 55

   39 Statement: RETURN . Expr SEMI
   40          | RETURN . SEMI

    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    CHRLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    SEMI     shift, and go to state 97
    ID       shift, and go to state 35

    Expr                 go to state 98
    Assignment_expr      go to state 37
    Logical_OR_expr      go to state 38
    Logical_AND_expr     go to state 39
    Inclusive_OR_expr    go to state 40
    Exclusive_OR_expr    go to state 41
    AND_expr             go to state 42
    Equality_expr        go to state 43
    Relational_expr      go to state 44
    Additive_expr        go to state 45
    Multiplicative_expr  go to state 46
    Unary_expression     go to state 47
    Postfix_expr         go to state 48
    Primary_expr         go to state 49


State 56

   34 Statement: LBRACE . Statement_none_or_more RBRACE
   35          | LBRACE . error RBRACE

    error    shift, and go to state 99
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    CHRLIT   shift, and go to state 30
    WHILE    shift, and go to state 53
    IF       shift, and go to state 54
    RETURN   shift, and go to state 55
    LBRACE   shift, and go to state 56
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    SEMI     shift, and go to state 58
    ID       shift, and go to state 35

    RBRACE  reduce using rule 44 (Statement_none_or_more)

    Statement               go to state 100
    Statement_none_or_more  go to state 101
    Expr                    go to state 63
    Assignment_expr         go to state 37
    Logical_OR_expr         go to state 38
    Logical_AND_expr        go to state 39
    Inclusive_OR_expr       go to state 40
    Exclusive_OR_expr       go to state 41
    AND_expr                go to state 42
    Equality_expr           go to state 43
    Relational_expr         go to state 44
    Additive_expr           go to state 45
    Multiplicative_expr     go to state 46
    Unary_expression        go to state 47
    Postfix_expr            go to state 48
    Primary_expr            go to state 49


State 57

    9 Function_body: LBRACE RBRACE .

    $default  reduce using rule 9 (Function_body)


State 58

   32 Statement: SEMI .

    $default  reduce using rule 32 (Statement)


State 59

    8 Function_body: LBRACE Declarations_and_statements . RBRACE

    RBRACE  shift, and go to state 102


State 60

   11 Declarations_and_statements: Declaration . Declarations_and_statements
   13                            | Declaration .

    error    shift, and go to state 1
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    CHRLIT   shift, and go to state 30
    CHAR     shift, and go to state 2
    WHILE    shift, and go to state 53
    IF       shift, and go to state 54
    INT      shift, and go to state 3
    SHORT    shift, and go to state 4
    DOUBLE   shift, and go to state 5
    RETURN   shift, and go to state 55
    VOID     shift, and go to state 6
    LBRACE   shift, and go to state 56
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    SEMI     shift, and go to state 58
    ID       shift, and go to state 35

    RBRACE  reduce using rule 13 (Declarations_and_statements)

    Declarations_and_statements  go to state 103
    Declaration                  go to state 60
    Type_spec                    go to state 61
    Statement                    go to state 62
    Expr                         go to state 63
    Assignment_expr              go to state 37
    Logical_OR_expr              go to state 38
    Logical_AND_expr             go to state 39
    Inclusive_OR_expr            go to state 40
    Exclusive_OR_expr            go to state 41
    AND_expr                     go to state 42
    Equality_expr                go to state 43
    Relational_expr              go to state 44
    Additive_expr                go to state 45
    Multiplicative_expr          go to state 46
    Unary_expression             go to state 47
    Postfix_expr                 go to state 48
    Primary_expr                 go to state 49


State 61

   21 Declaration: Type_spec . Declarator Declarator_none_or_more SEMI

    ID  shift, and go to state 64

    Declarator  go to state 19


State 62

   10 Declarations_and_statements: Statement . Declarations_and_statements
   12                            | Statement .

    error    shift, and go to state 1
    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    CHRLIT   shift, and go to state 30
    CHAR     shift, and go to state 2
    WHILE    shift, and go to state 53
    IF       shift, and go to state 54
    INT      shift, and go to state 3
    SHORT    shift, and go to state 4
    DOUBLE   shift, and go to state 5
    RETURN   shift, and go to state 55
    VOID     shift, and go to state 6
    LBRACE   shift, and go to state 56
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    SEMI     shift, and go to state 58
    ID       shift, and go to state 35

    RBRACE  reduce using rule 12 (Declarations_and_statements)

    Declarations_and_statements  go to state 104
    Declaration                  go to state 60
    Type_spec                    go to state 61
    Statement                    go to state 62
    Expr                         go to state 63
    Assignment_expr              go to state 37
    Logical_OR_expr              go to state 38
    Logical_AND_expr             go to state 39
    Inclusive_OR_expr            go to state 40
    Exclusive_OR_expr            go to state 41
    AND_expr                     go to state 42
    Equality_expr                go to state 43
    Relational_expr              go to state 44
    Additive_expr                go to state 45
    Multiplicative_expr          go to state 46
    Unary_expression             go to state 47
    Postfix_expr                 go to state 48
    Primary_expr                 go to state 49


State 63

   33 Statement: Expr . SEMI
   46 Expr: Expr . COMMA Assignment_expr

    COMMA  shift, and go to state 72
    SEMI   shift, and go to state 105


State 64

   25 Declarator: ID . ASSIGN Expr
   26           | ID .

    ASSIGN  shift, and go to state 21

    $default  reduce using rule 26 (Declarator)


State 65

   23 Declarator_none_or_more: COMMA Declarator .

    $default  reduce using rule 23 (Declarator_none_or_more)


State 66

   21 Declaration: Type_spec Declarator Declarator_none_or_more SEMI .

    $default  reduce using rule 21 (Declaration)


State 67

   88 Primary_expr: LPAR error . RPAR

    RPAR  shift, and go to state 106


State 68

   46 Expr: Expr . COMMA Assignment_expr
   87 Primary_expr: LPAR Expr . RPAR

    COMMA  shift, and go to state 72
    RPAR   shift, and go to state 107


State 69

   76 Unary_expression: MINUS Unary_expression .

    $default  reduce using rule 76 (Unary_expression)


State 70

   77 Unary_expression: NOT Unary_expression .

    $default  reduce using rule 77 (Unary_expression)


State 71

   75 Unary_expression: PLUS Unary_expression .

    $default  reduce using rule 75 (Unary_expression)


State 72

   46 Expr: Expr COMMA . Assignment_expr

    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    CHRLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    ID       shift, and go to state 35

    Assignment_expr      go to state 108
    Logical_OR_expr      go to state 38
    Logical_AND_expr     go to state 39
    Inclusive_OR_expr    go to state 40
    Exclusive_OR_expr    go to state 41
    AND_expr             go to state 42
    Equality_expr        go to state 43
    Relational_expr      go to state 44
    Additive_expr        go to state 45
    Multiplicative_expr  go to state 46
    Unary_expression     go to state 47
    Postfix_expr         go to state 48
    Primary_expr         go to state 49


State 73

   50 Logical_OR_expr: Logical_OR_expr OR . Logical_AND_expr

    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    CHRLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    ID       shift, and go to state 35

    Logical_AND_expr     go to state 109
    Inclusive_OR_expr    go to state 40
    Exclusive_OR_expr    go to state 41
    AND_expr             go to state 42
    Equality_expr        go to state 43
    Relational_expr      go to state 44
    Additive_expr        go to state 45
    Multiplicative_expr  go to state 46
    Unary_expression     go to state 110
    Postfix_expr         go to state 48
    Primary_expr         go to state 49


State 74

   52 Logical_AND_expr: Logical_AND_expr AND . Inclusive_OR_expr

    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    CHRLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    ID       shift, and go to state 35

    Inclusive_OR_expr    go to state 111
    Exclusive_OR_expr    go to state 41
    AND_expr             go to state 42
    Equality_expr        go to state 43
    Relational_expr      go to state 44
    Additive_expr        go to state 45
    Multiplicative_expr  go to state 46
    Unary_expression     go to state 110
    Postfix_expr         go to state 48
    Primary_expr         go to state 49


State 75

   54 Inclusive_OR_expr: Inclusive_OR_expr BITWISEOR . Exclusive_OR_expr

    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    CHRLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    ID       shift, and go to state 35

    Exclusive_OR_expr    go to state 112
    AND_expr             go to state 42
    Equality_expr        go to state 43
    Relational_expr      go to state 44
    Additive_expr        go to state 45
    Multiplicative_expr  go to state 46
    Unary_expression     go to state 110
    Postfix_expr         go to state 48
    Primary_expr         go to state 49


State 76

   56 Exclusive_OR_expr: Exclusive_OR_expr BITWISEXOR . AND_expr

    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    CHRLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    ID       shift, and go to state 35

    AND_expr             go to state 113
    Equality_expr        go to state 43
    Relational_expr      go to state 44
    Additive_expr        go to state 45
    Multiplicative_expr  go to state 46
    Unary_expression     go to state 110
    Postfix_expr         go to state 48
    Primary_expr         go to state 49


State 77

   58 AND_expr: AND_expr BITWISEAND . Equality_expr

    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    CHRLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    ID       shift, and go to state 35

    Equality_expr        go to state 114
    Relational_expr      go to state 44
    Additive_expr        go to state 45
    Multiplicative_expr  go to state 46
    Unary_expression     go to state 110
    Postfix_expr         go to state 48
    Primary_expr         go to state 49


State 78

   60 Equality_expr: Equality_expr EQ . Relational_expr

    REALLIT  shift, and go to state 28
    INTLIT   shift, and go to state 29
    CHRLIT   shift, and go to state 30
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    ID       shift, and go to state 35

    Relational_expr      go to state 115
    Additive_expr        go to state 45
    Multiplicative_expr  go to state 46
    Unary_expression     go to state 110
    Postfix_expr         go to state 48
    Primary_expr         go to state 49


State 79

   61 Equality_expr: Equality_expr NE . Relational_expr
